--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -26,6 +26,11 @@
     <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
   -->
 
+    <!-- Latex Math -->
+    {% include extension/latex %}
+    <!-- Mermaid -->
+    {% include extension/mermaid %}
+
     <!-- atom & rss feed -->
     <link href="{{ BASE_PATH }}{{ site.JB.atom_path }}" type="application/atom+xml" rel="alternate" title="Sitewide ATOM Feed">
     <link href="{{ BASE_PATH }}{{ site.JB.rss_path }}" type="application/rss+xml" rel="alternate" title="Sitewide RSS Feed">
@@ -53,9 +58,8 @@
       </div>
       <hr>
       <footer>
-        <p>&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}
-          with help from <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
-          and <a href="http://getbootstrap.com" target="_blank">Bootstrap</a>
+        <p>Copyright &copy; {{ site.time | date: '%Y' }} {{ site.author.name }}, 
+          Email: <a href="mailto:{{ site.author.email }}">{{ site.author.email }}
         </p>
       </footer>
 
